--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@
     align-items: center;
 }
 
+.themme {
+    align-self: flex-start;
+    margin-top: 15px;
+}
+
 .container-calculator {
     width: 350px;
     height: 500px;
