--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@
     align-content: flex-end;
 }
 
+.display li {
+    list-style-type: none;
+}
+
 .clearfix {
     width: 100%;
     display: block;;
