--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .wrapper {
-    background-color: rgba(17, 17, 17, 0.65);
+    background-color: rgba(17, 17, 17, 0.45);
 }
 
 .display {
@@ -37,6 +37,11 @@ body {
     border: 0;
     box-shadow: 2px 2px 6px #000; 
     transition: all 0.3s ease;
+}
+
+.btn-action-style {
+    color: #fff; 
+    font-size: 20px;
 }
 
 .btn-style:hover{
