--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 * {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
     font-weight: 600;
     color: #000;
     border-radius: 5px;
@@ -30,6 +31,10 @@ body {
 
 .clearfix {
     border: 0.5px solid #747171;
+}
+
+.btn-op {
+    font-size: 20px;
 }
 
 .btn-style {
