--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 600;
     color: #000;
     border-radius: 5px;
@@ -29,6 +29,16 @@ body {
     list-style-type: none;
 }
 
+.display-element {
+    font-size: 18px;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.display-element-margin {
+    margin: 0px 5px;
+}
+
 .clearfix {
     border: 0.5px solid #747171;
 }
@@ -44,7 +54,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.btn-action-style {
+.btn-action {
     color: #fff; 
     font-size: 20px;
 }
