--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/* this CSS is turned to the layout's configuration */
+/* PROJECT STATUS: FINISHED */
+/* This CSS is turned to the layout design configuration */
 
 * {
     font-family: Arial, Helvetica, sans-serif;
